--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
             <div class="header-btn">
                 <ul>
                     
-                    <li><a href="portfolio.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href ="aboutme.html">About Me</a></li>
                     <li><a style="border-bottom:4px solid rgb(21, 21, 158);" href ="projects.html">Projects</a></li>
                     <li><a href ="skills.html">Skills</a></li>
