new updates to button

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         </div>
         </div>
         <div class="links">
-            <a class="cv" href="">DOWNLOAD CV</a>
-            <a class="linkedin" href="">LinkedIn</a>
-            <a class="github" href="">GitHub</a>
+            <a class="cv" href="cv 2.pdf">DOWNLOAD CV</a>
+            <a class="linkedin" href="www.linkedin.com/in/ayaan-azam-98739728b">LinkedIn</a>
+            <a class="github" href="https://github.com/ayaan-azam">GitHub</a>
         </div>
     </body>
 </html>
